# rexec

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.standalone  Makefile  README.md  go.mod  go.sum  test_output.txt
.github/workflows/: auto-tag.yml  ci.yml  publish-sdks.yml  release-cli.yml  release.yml  tag.yml
cmd/rexec/: main.go
cmd/rexec-agent/: main.go
cmd/rexec-cli/: main.go
cmd/rexec-guest-agent/: main.go
cmd/rexec-ssh/: main.go
cmd/rexec-tui/: main.go
docker/: .env.example  Dockerfile.agent  Dockerfile.cli  docker-compose.standalone.yml  docker-compose.yml
docker/docker-host/: setup.sh
docker/nginx/: nginx.conf  rexec_scaling.conf
docker/podman-host/: setup.sh
docs/: DEPLOY_PAAS.md  DEPLOY_STANDALONE.md  SDK.md  SDK_GETTING_STARTED.md  SDK_PUBLISHING.md  SDK_ROADMAP.md  SSH_GATEWAY_PLAN.md  terminal-interface-design.md
embed/: package-lock.json  vite.config.ts
embed/examples/: basic.html
embed/src/: api.ts  terminal.ts  types.ts
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  robots.txt
frontend/src/: App.svelte  main.ts  sw.ts
internal/auth/: mfa.go  pkce.go
internal/billing/: stripe.go
internal/container/: cleanup.go  cleanup_test.go  manager.go  manager_accessors_test.go  manager_init_exec_test.go  manager_lifecycle_test.go  manager_stats_test.go  manager_test.go  mock_client_test.go  reconciler.go  reconciler_test.go  roles.go  roles_test.go  shell_setup.go  shell_setup_test.go
internal/crypto/: crypto.go
internal/firecracker/: guest_agent.go  manager.go
internal/models/: models.go  models_test.go
internal/pubsub/: redis.go  ws_manager.go
internal/storage/: postgres.go  postgres_admin.go  postgres_agent.go  postgres_tokens.go  r2.go  redis.go
launch/: embed-widget.md
scripts/: build-images.sh  deploy.sh  entrypoint.sh  install-agent.sh  install-cli.sh  setup-docker-tls.sh  start-standalone.sh  test-resource-limits.sh
sdk/go/: README.md  go.mod  rexec.go
sdk/java/: pom.xml
sdk/js/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  containers.rs  error.rs  files.rs  lib.rs  terminal.rs  types.rs
web/: ai.txt  index.html  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
web-ui/: index.html  package-lock.json  package.json  patch_backend.js  vite.config.ts
web-ui/public/: robots.txt  sitemap.xml
web-ui/src/: App.svelte  sw.ts
web/.well-known/: ai-plugin.json
web/assets/: APITokens-CkJLdkD2.js  Account-Dj0kDhuD.js  (+109 more)
(+151 files in other folders)
