[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rexec"
version = "1.0.0"
description = "Official Python SDK for Rexec - Terminal as a Service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "PipeOpsHQ", email = "support@pipeops.io" }
]
keywords = [
    "rexec",
    "terminal",
    "sandbox",
    "docker",
    "container",
    "ssh",
    "websocket",
    "cloud-terminal"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/PipeOpsHQ/rexec"
Documentation = "https://github.com/PipeOpsHQ/rexec/blob/main/docs/SDK.md"
Repository = "https://github.com/PipeOpsHQ/rexec.git"
Issues = "https://github.com/PipeOpsHQ/rexec/issues"

[tool.hatch.build.targets.wheel]
packages = ["rexec"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
