[package]
name = "rexec"
version = "1.0.0"
edition = "2021"
authors = ["PipeOpsHQ <support@pipeops.io>"]
description = "Official Rust SDK for Rexec - Terminal as a Service"
license = "MIT"
repository = "https://github.com/PipeOpsHQ/rexec"
documentation = "https://docs.rs/rexec"
readme = "README.md"
keywords = ["rexec", "terminal", "sandbox", "docker", "container"]
categories = ["api-bindings", "development-tools"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
urlencoding = "2"
futures-util = "0.3"
http = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
rustls = ["tokio-tungstenite/rustls-tls-native-roots", "reqwest/rustls-tls"]
